Objetos pase estabiolizacion migracion